@@ -1,3 +1,7 @@
+2008-02-25  Satoshi Nakagawa <artension@gmail.com>
+
+	Added DOCTYPE and some meta tags to the template for log views.
+
 2008-02-24  Satoshi Nakagawa <artension@gmail.com>
 
 	Added some classes and attributes to log lines for more control in css.
